--- a/Abstract/abstract.tex
+++ b/Abstract/abstract.tex
@@ -1,5 +1,9 @@
 % ************************** Thesis Abstract *****************************
 % Use `abstract' as an option in the document class to print only the titlepage and the abstract.
 \begin{abstract}
-This is where you write your abstract ...
+There has been a lot work done in the areas of slim down kernels, OS paradigms which treat a multi-core machine as network of independent cores 
+and specialized hardware which could provide certain security features. While independently they have been heavily worked on. The major aims for 
+the following research would be to combine all 3 of them to together and address the potential benefits from such an approach. The year 1 report 
+does a survey of implementations done in the areas Uni-kernels, Multi-kernels and TAG based architectures and based on these surveys comes up
+with the research aims for the following PhD. A timeline is provided to provide detailed plan for the following research.
 \end{abstract}
