--- a/References/references.bib
+++ b/References/references.bib
@@ -534,6 +534,62 @@ series = {CCS '13}
 	file = {Barbalace et al. - Popcorn a replicated-kernel OS based on Linux.pdf:/Users/akilan/Zotero/storage/NFQ78YDM/Barbalace et al. - Popcorn a replicated-kernel OS based on Linux.pdf:application/pdf},
 }
 
+@INPROCEEDINGS{FusedOS,
+  author={Park, Yoonho and Van Hensbergen, Eric and Hillenbrand, Marius and Inglett, Todd and Rosenburg, Bryan and Ryu, Kyung Dong and Wisniewski, Robert W.},
+  booktitle={2012 IEEE 24th International Symposium on Computer Architecture and High Performance Computing}, 
+  title={FusedOS: Fusing LWK Performance with FWK Functionality in a Heterogeneous Environment}, 
+  year={2012},
+  volume={},
+  number={},
+  pages={211-218},
+  doi={10.1109/SBAC-PAD.2012.14}}
+
+@INPROCEEDINGS{McKernel,
+  author={Gerofi, Balazs and Takagi, Masamichi and Hori, Atsushi and Nakamura, Gou and Shirasawa, Tomoki and Ishikawa, Yutaka},
+  booktitle={2016 IEEE International Parallel and Distributed Processing Symposium (IPDPS)}, 
+  title={On the Scalability, Performance Isolation and Device Driver Transparency of the IHK/McKernel Hybrid Lightweight Kernel}, 
+  year={2016},
+  volume={},
+  number={},
+  pages={1041-1050},
+  doi={10.1109/IPDPS.2016.80}}
+
+@InProceedings{FFMK,
+author="Weinhold, Carsten
+and Lackorzynski, Adam
+and Bierbaum, Jan
+and K{\"u}ttler, Martin
+and Planeta, Maksym
+and Weisbach, Hannes
+and Hille, Matthias
+and H{\"a}rtig, Hermann
+and Margolin, Alexander
+and Sharf, Dror
+and Levy, Ely
+and Gak, Pavel
+and Barak, Amnon
+and Gholami, Masoud
+and Schintke, Florian
+and Sch{\"u}tt, Thorsten
+and Reinefeld, Alexander
+and Lieber, Matthias
+and Nagel, Wolfgang E.",
+editor="Bungartz, Hans-Joachim
+and Reiz, Severin
+and Uekermann, Benjamin
+and Neumann, Philipp
+and Nagel, Wolfgang E.",
+title="FFMK: A Fast and Fault-Tolerant Microkernel-Based System for Exascale Computing",
+booktitle="Software for Exascale Computing - SPPEXA 2016-2019",
+year="2020",
+publisher="Springer International Publishing",
+address="Cham",
+pages="483--516",
+abstract="The FFMK project designs, builds and evaluates a system-software architecture to address the challenges expected in Exascale systems. In particular, these challenges include performance losses caused by the much larger impact of runtime variability within applications, hardware, and operating system (OS), as well as increased vulnerability to failures. The FFMK OS platform is built upon a multi-kernel architecture, which combines the L4Re microkernel and a virtualized Linux kernel into a noise-free, yet feature-rich execution environment. It further includes global, distributed platform management and system-level optimization services that transparently minimize checkpoint/restart overhead for applications. The project also researched algorithms to make collective operations fault tolerant in presence of failing nodes. In this paper, we describe the basic components, algorithms, and services we developed in Phase 2 of the project.",
+isbn="978-3-030-47956-5"
+}
+
+
 @article{NAS,
 	title = {{NAS} parallel benchmark results},
 	volume = {1},
